# macsweep.dev

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agent/: README.md  RECOMMENDATIONS.md  ROADMAP.md
.agent/SYSTEM/: ARCHITECTURE.md
.agent/prds/: PRD-001-macsweep-native.md
.agents/: BACKLOG.md  README.md  ROADMAP.md  UI-FIX-BRIEF-2026-07-08.md
.agents/PRDS/: PRD-001-macsweep-native.md
.agents/SYSTEM/: ARCHITECTURE.md  CLEANUP_TARGETS.md
.agents/TASKS/: TASK-001-project-setup.md  TASK-002-core-scanning-engine.md  TASK-003-safety-module.md  TASK-004-system-cleanup.md  TASK-005-browser-cleanup.md  TASK-006-developer-tools.md  TASK-007-app-uninstaller.md  TASK-008-storage-visualizer.md  TASK-009-large-files.md  TASK-010-menu-bar-widget.md  TASK-011-network-cleanup.md  TASK-012-package-manager-cleanup.md  TASK-013-docker-cleanup.md  TASK-014-system-maintenance.md  TASK-015-ios-app.md  TASK-016-duplicate-finder.md
.agents/memory/: README.md
.agents/skills/liquid-glass/: SKILL.md
.agents/skills/scan-and-memorize/: SKILL.md
.claude/commands/: release.md
.github/: ISSUE_GUIDE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-work-item.yml  bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml  dmg.yml  nightly-app.yml  nightly.yml  release.yml  secret-scan.yml  update-homebrew.yml
Formula/: macsweep.rb
MacSweep/: Info.plist  Package.swift  project.yml
MacSweep/.agent/SESSIONS/: 2026-01-16.md
MacSweep/.build/: build.db-journal  debug.yaml
MacSweep/.build/arm64-apple-macosx/debug/: description.json
MacSweep/MacSweep.xcodeproj/: project.pbxproj
MacSweep/MacSweep.xcodeproj/xcshareddata/xcschemes/: MacSweep.xcscheme  MacSweepCLI.xcscheme
MacSweep/Sources/: Info.plist
MacSweep/Sources/App/: AppDelegate.swift  AppState.swift  AppUpdater.swift  LiquidGlass.swift  MacSweepApp.swift  Motion.swift
MacSweep/Sources/Background/: LastScanStore.swift  NotificationManager.swift  ScanScheduler.swift
MacSweep/Sources/CLI/: main.swift
MacSweep/Sources/CLIKit/: CLICommand.swift  CLIExecutor.swift
MacSweep/Sources/Core/: FeatureNavigation.swift  MacSweepLinks.swift  MacSweepVersion.swift  UpdateChannel.swift
MacSweep/Sources/Core/Assistant/: AssistantConfigRepository.swift  AssistantConversationService.swift  AssistantModels.swift  AssistantProviderProcess.swift  AssistantTOMLCodec.swift  AssistantWatchlistModule.swift
MacSweep/Sources/Core/Headless/: HeadlessModels.swift  HeadlessService.swift
MacSweep/Sources/Core/Logging/: AppLogStore.swift  Log.swift
MacSweep/Sources/Services/: AIAnalysisService.swift  AIKeychainService.swift
MacSweep/Tests/: AIAnalysisModelsTests.swift  AppLogStoreTests.swift  AppUninstallerDisposalTests.swift  AppUninstallerListProjectionTests.swift  AppUninstallerModuleTests.swift  AssistantConversationProcessRunnerTests.swift  AssistantTOMLCodecTests.swift  AssistantWatchlistModuleTests.swift  BrowserModuleTests.swift  BrowserScanResultTests.swift  BuildArtifactScanStateTests.swift  CLIBrandingTests.swift  CLICommandParserTests.swift  CacheAnalyzerTests.swift  CleanupDispositionTests.swift  CleanupFileRemoverTests.swift  CleanupHistoryStoreTests.swift  CleanupPerformanceStoreTests.swift  CleanupReviewSummaryTests.swift  CloudCleanupEvidenceTests.swift  ConnectedDeviceScannerTests.swift  DNSCacheManagerTests.swift  DeletionGuardTests.swift  DevArtifactActivityGateTests.swift  DevToolsModuleTests.swift  DiskAnalyzerTests.swift  DiskVisualizationLayoutTests.swift  DockerCleanupActionTests.swift  DockerInfoTests.swift  DockerModuleReclaimableTests.swift  DuplicateFinderModuleTests.swift  ErrorPresentationTests.swift  FeatureNavigationTests.swift  FullDiskAccessScopeTests.swift  GitArtifactScannerTests.swift  GitWorktreeIgnoredContentTests.swift  HeadlessSerializationTests.swift  HeadlessServiceTests.swift  HomebrewPathsTests.swift  HomebrewServiceProcessRunnerTests.swift  (+43 more)
MacSweep/Tests/Support/: TempTestDirectory.swift
docs/audits/: 00-repo-map.md  01-deletion-safety.md  01-dry-slop-audit.md
scripts/: RenderSnapshots.swift  coverage.sh  e2e.sh  release-test.sh  release.sh  render-screenshots.sh  skills.sh  test.sh
src/macsweep/: __init__.py  __main__.py  cli.py
src/macsweep/analyzers/: __init__.py  large_files.py  unused_apps.py
src/macsweep/core/: __init__.py  logging.py  safety.py
src/macsweep/modules/: __init__.py  base.py
src/macsweep/monitors/: __init__.py  cpu.py  memory.py
src/macsweep/tui/: __init__.py  app.py
src/macsweep/utils/: __init__.py  paths.py  size.py
tests/: __init__.py  conftest.py  test_analyzers.py  test_cli.py  test_logging.py  test_modules.py  test_monitors.py  test_safety.py  test_utils.py
(+384 files in other folders)
